tests/frontend/fail/emptystorage/mapkeyexp.act
constructor of ReadMappingIndex
interface constructor(uint _x, uint _y)

creates
  uint                x := _x
  uint                y := _y
  mapping(uint=>uint) m := [x + 5 := _y]
